*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.4 ===
* Added test build for Windows using MSYS2.

=== 1.0.3 ===
* Added Clang build for the CI.
* Updated project tree.

=== 1.0.2 ===
* Updated build scripts.

=== 1.0.1 ===
* Updated build scripts.

=== 1.0.0 ===
* Initial release.
