@@ -4,6 +4,7 @@
 
 === 1.0.4 ===
 * Added test build for Windows using MSYS2.
+* Updated build scripts.
 
 === 1.0.3 ===
 * Added Clang build for the CI.
